This revision represents an attempt to cleanup the architecture of this code base which is littered with static fields, flags, and incomprehensible contracts.
The following files were modified:

M    testFiles/forElementaryLevelTest/shouldBreak/ShadowingTestClass.dj0
M    testFiles/forElementaryLevelTest/shouldBreak/BeginnerShouldBreakAnonClass.dj0
M    src/edu/rice/cs/javalanglevels/IntermediateLevelTest.java
M    src/edu/rice/cs/javalanglevels/TypeChecker.java
M    src/edu/rice/cs/javalanglevels/ArrayData.java
M    src/edu/rice/cs/javalanglevels/Data.java
M    src/edu/rice/cs/javalanglevels/Symboltable.java
M    src/edu/rice/cs/javalanglevels/LValueTypeChecker.java
M    src/edu/rice/cs/javalanglevels/BodyBodyAdvancedVisitor.java
M    src/edu/rice/cs/javalanglevels/InterfaceBodyAdvancedVisitor.java
M    src/edu/rice/cs/javalanglevels/BodyTypeChecker.java
M    src/edu/rice/cs/javalanglevels/ElementaryVisitor.java
M    src/edu/rice/cs/javalanglevels/TryCatchBodyTypeChecker.java
M    src/edu/rice/cs/javalanglevels/ClassBodyAdvancedVisitor.java
M    src/edu/rice/cs/javalanglevels/IntermediateVisitor.java
M    src/edu/rice/cs/javalanglevels/AdvancedLevelTest.java
M    src/edu/rice/cs/javalanglevels/SymbolData.java
M    src/edu/rice/cs/javalanglevels/Bob.java
M    src/edu/rice/cs/javalanglevels/LanguageLevelConverter.java
M    src/edu/rice/cs/javalanglevels/InterfaceBodyTypeChecker.java
M    src/edu/rice/cs/javalanglevels/LValueWithValueTypeChecker.java
M    src/edu/rice/cs/javalanglevels/VoidMethodsNotAllowedClassBodyTypeChecker.java
M    src/edu/rice/cs/javalanglevels/ClassBodyTypeChecker.java
M    src/edu/rice/cs/javalanglevels/TypeData.java
M    src/edu/rice/cs/javalanglevels/BodyBodyElementaryVisitor.java
M    src/edu/rice/cs/javalanglevels/AdvancedVisitor.java
M    src/edu/rice/cs/javalanglevels/ExpressionTypeChecker.java
M    src/edu/rice/cs/javalanglevels/BodyBodyIntermediateVisitor.java
M    src/edu/rice/cs/javalanglevels/InterfaceBodyIntermediateVisitor.java
M 